# dolce

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_KAKSHAONLINE.md  README.md  docker-compose.dev-https.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod-https.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  DATA_MIGRATION.md  DOCKER_DATA_MIGRATION.md  Dockerfile  README.md  check_db.py  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt  wait-for-db.sh
backend/apps/cart/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/cart/migrations/: 0001_initial.py  0002_initial.py
backend/apps/content/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/content/migrations/: 0001_initial.py  0002_texttestimonial_videotestimonial_and_more.py  0003_aboutussection_blogpost_ourcommitmentsection_and_more.py  0004_contactsubmission.py  0005_contactinfo_and_more.py  (+1 more)
backend/apps/orders/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/payments/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/apps/products/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/config/: health.py  middleware.py  urls.py
backend/config/settings/: __init__.py  base.py  development.py  production.py
backend/fixtures/: .gitkeep  README.md
backend/fixtures/content/: .gitkeep
backend/fixtures/initial/: .gitkeep
frontend/: .dockerignore  (+3 more)
(+51 files in other folders)
